Make ResolutionResultTest cover systems that use both Windows and Linux-style file structure